<resources>
    <string name="app_name">Asistente de Lectura</string>
    <string name="ok">Aceptar</string>
    <string name="delete">Se borrara este registro, ¿estas seguro?</string>
    <string name="cancelar">Cancelar</string>

    <string name="txtSaludo1">¡Hola! ¿Qué vas a leer hoy? </string>
    <string name="txtSearchBar">¡Busca tu próximo libro!</string>
    <string name="txtWishlist">Lista de deseados</string>
    <string name="txtMsgHeaderWishlist">Ésto tienes pendiente por comenzar.</string>
    <string name="txtProgreso">Progreso</string>
    <string name="txtProgresoPortada">Tus libros actuales</string>
    <string name="txtMsgHeaderProgreso">¡Ya casi lo logras!</string>
    <string name="txtMsgHeaderProgresoPortada">Éste es tu avance.</string>
    <string name="txtTerminados">Libros Terminados</string>
    <string name="txtMsgHeaderTerminados">¿Algo que quieras revisitar?</string>
    <string name="txtColeccion">Colección</string>
    <string name="txtMsgHeaderColeccion">¡Donde nacen las aventuras!</string>
    <string name="txtBibliotecas">Descubre bibliotecas cercanas</string>

    <string name="btnBibliotecas">Bibliotecas cercanas</string>
    <string name="btnTerminadosPortada">Terminados</string>
    <string name="btnWishlistPortada">Deseados</string>
    <string name="btnColeccionPortada">Tuyos</string>

    <string name="msgDeleteLibroTerminado">¿Seguro que deseas eliminar este libro de tu lista de terminados? Tendrás que volver a colocarlo como "En Progreso" y actualizar tu avance para deshacer esta acción.</string>
    <string name="msgDeleteLibroProgreso">¿Seguro que deseas eliminar este libro de tu lista de "en progreso"? Tendrás que volver a colocarlo como "En Progreso" para deshacer esta acción.</string>

    <string name="msgAddWishlist">Agregar a la lista de deseados</string>
    <string name="msgAddColeccion">Agregar a la coleccion</string>
    <string name="msgActualizarProgreso">Actualizar progreso</string>

    <string name="moreOptions">Mantén tu dedo presionado sobre un registro para mostrar más opciones.</string>


</resources>
